deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-first-deployment
spec:
  selector:
    matchLabels:
      k8s-app: workshop
  template:
    metadata:
      labels:
        k8s-app: workshop
    spec:
      containers:
      - name: workshop-app
        image: 990090895087.dkr.ecr.ap-southeast-1.amazonaws.com/workshop:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
          requests:
            cpu: 100m 
            memory: 50Mi
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /liveness
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readeness
            port: 5000
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5
