service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-first-service
spec:
  selector:
    k8s-app: workshop
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
